--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 <!-- HEADER =============================-->
-<header class="item header margin-top-0">
+<header class="item header margin-top-0 ada">
 <div class="wrapper">
 	<nav role="navigation" class="navbar navbar-white navbar-embossed navbar-lg navbar-fixed-top">
 	<div class="container">
