--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 			<div class="col-md-12 text-center">
 				<div class="text-homeimage">
 					<div class="maintext-image" data-scrollreveal="enter top over 1.5s after 0.1s">
-						 Desenvolvimento de tecnologias
+						 SIPN
 					</div>
 					<div class="subtext-image" data-scrollreveal="enter bottom over 1.7s after 0.3s">
-						 Para facilitar sua vida
+						
 					</div>
 				</div>
 			</div>
