--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 <!-- BUTTON =============================-->
 <div class="item content">
 	<div class="container text-center">
-		<a href="shop.html" class="homebrowseitems">MAIS SERVIÇOS
+		<a href="servicos.html" class="homebrowseitems">MAIS SERVIÇOS
 		<div class="homebrowseitemsicon">
 			<i class="fa fa-star fa-spin"></i>
 		</div>
