--- a/comentarios.html
+++ b/comentarios.html
@@ -12,7 +12,9 @@
 <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
 <body>
-
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v16.0" nonce="1UygPZHl"></script>
+	
 <!-- HEADER =============================-->
 <header class="item header margin-top-0">
 <div class="wrapper">
@@ -97,7 +99,7 @@
 	</div>
 </div>
 </section>
-
+<div class="fb-comments" data-href="https://bippoles.github.io/sipn/comentarios.html" data-width="100%" data-numposts="100"></div>
 
 <!-- FOOTER =============================-->
 <div class="footer text-center">
