--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <link href="https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:200,300,400,500,600,700" rel="stylesheet">
 <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+<meta property="og:title" content="Sipn"/>
+<meta property="og:description" content="Venha conhecer nossos serviços e planos, garanto que não vai se arrepender"/> 
+<meta property="og:image" content="https://bippoles.github.io/sipn/images/product2-3.jpg"/> 
+<meta property="og:url" content="https://bippoles.github.io/sipn/"/>
 </head>
 <body>
 
